--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/Zamir31/ServidorNodeBackMySQL#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
